<resources>
    <string name="app_name">Anime Application</string>
    <string name="wh">wh?</string>
    <string name="imagequestion">imageQuestion</string>
    <string name="_0_4">0/4</string>
    <string name="option1">option1</string>
    <string name="option2">option2</string>
    <string name="option3">option3</string>
    <string name="option4">option4</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="anime_quiz">Anime Quiz</string>
    <string name="end">End</string>
    <string name="finish">Finish</string>
    <string name="score">Score</string>
    <string name="imagetrophy">imageTrophy</string>
    <string name="congratulation">Congratulation</string>
</resources>