<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="@color/colorAccent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".ScoreActivity">

    <TextView
        android:id="@+id/tvCongratulate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/congratulation"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/ivTrophy"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="15dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/imagetrophy" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/score"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="22sp" />

    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/white"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:text="@string/finish" />
</LinearLayout>